Refactor: Mise en place de l'architecture microservices, nettoyage des entités et migration vers Supabase